Fixes to the validation